--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="box">
-		<img src="logo.png" alt="" class="box-img">
+		<img src="logoss.png" alt="" class="box-img">
    <p><h2>Shubham Siddhartha</h2>
    	<h3>Web developer</h3>
    	<h4>PLEASE ALLOW INTRODUCE MYSELF,<br>I'M A MAN OF WEALTH AND TASTE</h4>
