--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </div>
 <div>
    <ul>
-   	<li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-   	<li><a href="https://twitter.com/login"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+   	<li><a href="https://www.facebook.com/ShUbHaM.sidartH"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+   	<li><a href="https://twitter.com/Shubham_sidd"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
    	<li><a href="https://accounts.google.com"><i class="fa fa-google" aria-hidden="true"></i></a></li>
    <li><a href="https://www.linkedin.com/in/shubham-siddhartha-aa8133157/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
    <li><a href="https://github.com/shubhamcoder97"><i class="fa fa-github" aria-hidden="true"></i></a></li>
