--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<img src="logoss.png" alt="" class="box-img">
    <p><h2>Shubham Siddhartha</h2>
    	<h3>Web developer</h3>
-   	<h4>PLEASE ALLOW INTRODUCE MYSELF,<br>I'M A MAN OF WEALTH AND TASTE</h4>
+   	<h4>PLEASE ALLOW INTRODUCE MYSELF,<br>I'M A MAN OF WEALTH AND TASTE!</h4>
    </p>
 </div>
 <div>
