--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script src="https://use.fontawesome.com/29452ec248.js"></script>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
-	<title>MY Website</title>
+	<title>SHUBhii</title>
 </head>
 <body>
 	<div class="box">
