--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<script src="https://use.fontawesome.com/29452ec248.js"></script>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 	<title>SHUBhii</title>
 </head>
